be/src/exec/blocking-join-node.cc
@@ -159,9 +159,10 @@ void BlockingJoinNode::ProcessBuildInputAsync(
   // probed. BlockingJoinNode::Open() will return failure as soon as child(0)->Open()
   // completes.
   if (CanCloseBuildEarly() || !status->ok()) {
-    // Release resources in 'build_batch_' before closing the children as some of the
-    // resources are still accounted towards the children node.
+    // Release resources in 'build_batch_' and 'build_sink' before closing the children
+    // as some of the resources are still accounted towards the children node.
     build_batch_.reset();
+    if (!status->ok()) build_sink->Close(state);
     child(1)->Close(state);
   }
 
