be/src/exec/data-sink.h
@@ -99,6 +99,7 @@ class DataSink {
   const std::vector<ScalarExprEvaluator*>& output_expr_evals() const {
     return output_expr_evals_;
   }
+  bool is_closed() const { return closed_; }
 
  protected:
   /// Set to true after Close() has been called. Subclasses should check and set this in
